2003-01-09  Pierre Humblet  <pierre.humblet@ieee.org>

	* setfacl (usage): Remove double ":" for mask and other.

2003-01-07  Pierre Humblet <pierre.humblet@ieee.org>

	* mkpasswd.cc (current_user): Create.
	(usage): Reorganize to support Win95/98/ME.
	(main): Add option for -c. Reorganize to parse options for
	Win95/98/ME and to call current_user. Add username in gecos field
	on Win95/98/ME.
	* mkgroup.cc (enum_groups): Print gid with %u.
	(print_win_error): Create from passwd.cc.  
	(current_group): Create.
	(usage): Reorganize to support Win95/98/ME.
	(main): Add option for -c. Reorganize to parse options for
	Win95/98/ME and to call current_group.   

2002-12-14  Pierre Humblet <pierre.humblet@ieee.org>

	* setfacl.c (main): Place a single : after other and mask.
	* getfacl.c (getaclentry): Allow both : and :: for other and mask.
	(main): Remove extraneous break.

2002-11-25  Corinna Vinschen  <corinna@vinschen.de>

	* mkpasswd.c (main): Set pw_passwd field to '*' on 9x/Me.

2002-11-24  Corinna Vinschen  <corinna@vinschen.de>

	* setfacl.c (getperm): Set only `other' permission bits.
	(getaclentry): Set a_id to -1 by default.

2002-11-24  Corinna Vinschen  <corinna@vinschen.de>

	* getfacl.c (permstr): Use `other' permission bits for requesting
	ace permissions.

2002-11-08  Corinna Vinschen  <corinna@vinschen.de>

	* setfacl.c (usage): Add missing LF.

2002-10-30  Christopher Faylor  <cgf@redhat.com>

	* cygpath.cc (get_long_path_name_w32impl): Define similarly to
	GetLongPathName.
	(get_long_name): Correctly prototype GetLongPathName.
	(get_long_paths): Implement using get_long_name to cut down on code
	duplication.
	(doit): Do various things to make path output work predictably.

2002-10-19  Christopher Faylor  <cgf@redhat.com>

	* mount.cc (usage): Correctly report default mode.
	* strace.cc (main): Use strtoul as appropriate.

2002-09-29  Christopher Faylor  <cgf@redhat.com>

	* cygpath.cc (close_arg): Remove unused static.