@@ -1,6 +1,6 @@
 /* mkgroup.c:
 
-   Copyright 1997, 1998, 1999, 2000, 2001, 2002 Red Hat, Inc.
+   Copyright 1997, 1998, 1999, 2000, 2001, 2002, 2003 Red Hat, Inc.
 
    This file is part of Cygwin.
 
