@@ -1,15 +1,21 @@
+2003-01-15  Corinna Vinschen  <corinna@vinschen.de>
+
+	* mkgroup.c: Fix copyright date.
+	* mkpasswd.c: Ditto.
+	* setfacl.c: Ditto.
+
 2003-01-09  Pierre Humblet  <pierre.humblet@ieee.org>
 
-	* setfacl (usage): Remove double ":" for mask and other.
+	* setfacl.c (usage): Remove double ":" for mask and other.
 
 2003-01-07  Pierre Humblet <pierre.humblet@ieee.org>
 
-	* mkpasswd.cc (current_user): Create.
+	* mkpasswd.c (current_user): Create.
 	(usage): Reorganize to support Win95/98/ME.
 	(main): Add option for -c. Reorganize to parse options for
 	Win95/98/ME and to call current_user. Add username in gecos field
 	on Win95/98/ME.
-	* mkgroup.cc (enum_groups): Print gid with %u.
+	* mkgroup.c (enum_groups): Print gid with %u.
 	(print_win_error): Create from passwd.cc.  
 	(current_group): Create.
 	(usage): Reorganize to support Win95/98/ME.
